--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(MLXCex LANGUAGES C CXX Swift)
+project(SwiftMLX LANGUAGES C CXX Swift)
 
 set(MLX_C_BUILD_EXAMPLES OFF)
 include(FetchContent)
@@ -15,14 +15,17 @@ FetchContent_Declare(
   GIT_TAG "main")
 FetchContent_MakeAvailable(mlxc)
 
+# Mlx lib
 add_library(
   Mlx STATIC
-  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/array.swift
-  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/device.swift
-  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/stream.swift)
+  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/Array.swift
+  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/Device.swift
+  ${CMAKE_CURRENT_LIST_DIR}/Source/Mlx/Stream.swift)
 target_include_directories(Mlx
                            PUBLIC ${CMAKE_CURRENT_LIST_DIR}/Source/Cmlx/include)
 target_link_libraries(Mlx PRIVATE mlxc)
 
-add_executable(example example.swift)
-target_link_libraries(example PRIVATE Mlx)
+# Examples
+add_executable(example1
+               ${CMAKE_CURRENT_LIST_DIR}/Source/Examples/Example1.swift)
+target_link_libraries(example1 PRIVATE Mlx)
