--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
     resource_class: macos.m1.medium.gen1
     steps:
       - checkout
+	  - run: git submodule sync
+	  - run: git submodule update --init
       - run:
           name: Run Tests
           command: |
