--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ jobs:
       - run: git submodule sync
       - run: git submodule update --init
       - run:
+          name: Run style checks
+          command: |
+            pip install pre-commit
+            brew install swift-format
+            pre-commit run --all
+            if ! git diff --quiet; then echo 'Style checks failed, please install pre-commit and run pre-commit run --all and push the change'; exit 1; fi
+      - run:
           name: Run Tests
           command: |
             xcodebuild -version
