--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,24 @@ FetchContent_Declare(
   GIT_TAG "v0.0.2")
 FetchContent_MakeAvailable(mlx-c)
 
+# swift-numerics
+set(swift_numerics_patch git apply
+                         ${CMAKE_CURRENT_SOURCE_DIR}/cmake/swift-numerics.patch)
+FetchContent_Declare(
+  swift-numerics
+  GIT_REPOSITORY "https://github.com/apple/swift-numerics.git"
+  GIT_TAG "1.0.2"
+  PATCH_COMMAND ${swift_numerics_patch} || true)
+FetchContent_MakeAvailable(swift-numerics)
+
 # MLX package
 file(GLOB MLX-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLX/*.swift)
 add_library(MLX STATIC ${MLX-src})
 target_include_directories(MLX
                            PUBLIC ${CMAKE_CURRENT_LIST_DIR}/Source/Cmlx/include)
 # Note: mlxc is target name exported by mlx-c
-target_link_libraries(MLX PUBLIC mlxc)
+target_link_libraries(MLX PUBLIC mlxc Numerics)
+target_compile_options(MLX PRIVATE -package-name MLX)
 
 # MLXRandom package
 file(GLOB MLXRandom-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLXRandom/*.swift)
@@ -33,7 +44,8 @@ add_library(MLXNN STATIC ${MLXNN-src})
 target_link_libraries(MLXNN PRIVATE MLX MLXRandom)
 
 # MLXOptimizers package
-file(GLOB MLXOptimizers-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLXOptimizers/*.swift)
+file(GLOB MLXOptimizers-src
+     ${CMAKE_CURRENT_LIST_DIR}/Source/MLXOptimizers/*.swift)
 add_library(MLXOptimizers STATIC ${MLXOptimizers-src})
 target_link_libraries(MLXOptimizers PRIVATE MLX MLXNN)
 
@@ -57,8 +69,3 @@ add_executable(tutorial
                ${CMAKE_CURRENT_LIST_DIR}/Source/Examples/Tutorial.swift)
 target_link_libraries(tutorial PRIVATE MLX)
 target_compile_options(tutorial PRIVATE -parse-as-library)
-
-add_executable(llama-mlx-bench
-               ${CMAKE_CURRENT_LIST_DIR}/Source/Examples/LlamaMLXBench.swift)
-target_link_libraries(llama-mlx-bench PRIVATE MLX MLXNN)
-target_compile_options(llama-mlx-bench PRIVATE -parse-as-library)
