adopt mlx changes up to v0.6.0
- https://github.com/ml-explore/mlx/compare/v0.5.1...v0.6.0
- add MLXFast package
- expose RoPE and scaledDotProductAttention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,15 @@ file(GLOB MLXRandom-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLXRandom/*.swift)
 add_library(MLXRandom STATIC ${MLXRandom-src})
 target_link_libraries(MLXRandom PRIVATE MLX)
 
+# MLXFast package
+file(GLOB MLXFast-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLXFast/*.swift)
+add_library(MLXFast STATIC ${MLXFast-src})
+target_link_libraries(MLXFast PRIVATE MLX)
+
 # MLXNN package
 file(GLOB MLXNN-src ${CMAKE_CURRENT_LIST_DIR}/Source/MLXNN/*.swift)
 add_library(MLXNN STATIC ${MLXNN-src})
-target_link_libraries(MLXNN PRIVATE MLX MLXRandom)
+target_link_libraries(MLXNN PRIVATE MLX MLXRandom MLXFast)
 
 # MLXOptimizers package
 file(GLOB MLXOptimizers-src
