--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,5 +11,46 @@ jobs:
     runs-on: [self-hosted, macos]
     steps:
       - uses: actions/checkout@v5
-      - uses: ./.github/actions/setup-macos
-      - uses: ./.github/actions/build-macos
+      - name: Verify MetalToolchain installed
+        shell: bash
+        run: xcodebuild -showComponent MetalToolchain
+      
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v6
+        with:
+            python-version: ${{ inputs.python-version }}
+            activate-environment: true
+     
+      - name: Setup swift-format
+        shell: sh
+        run: |
+          uv pip install pre-commit
+          brew install swift-format
+     
+      - name: Setup cmake
+        shell: sh
+        run: |
+          brew install cmake ninja
+     
+      - name: Run style checks
+        shell: sh
+        run: |
+          pre-commit run --all || (echo "Style checks failed, please install pre-commit and run pre-commit run --all and push the change"; echo ""; git --no-pager diff; exit 1)
+      
+      - name: Run Tests (Xcode, macOS)
+        shell: sh
+        run: |
+          xcodebuild -version
+          xcrun --show-sdk-build-version
+          swift --version
+          xcodebuild test -scheme mlx-swift-Package -destination 'platform=OS X'
+    
+      - name: Build (cmake)
+        shell: sh
+        run: |
+          rm -rf build
+          mkdir build
+          cd build
+          cmake .. -G Ninja
+          ninja
+
