--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: [self-hosted, macos]
     steps:
       - uses: actions/checkout@v5
+        with:
+          submodules: recursive
+     
       - name: Verify MetalToolchain installed
         shell: bash
         run: xcodebuild -showComponent MetalToolchain
