clean deriveddata, try a different platform

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,7 +47,8 @@ jobs:
           xcodebuild -version
           xcrun --show-sdk-build-version
           swift --version
-          xcodebuild test -scheme mlx-swift-Package -destination 'platform=OS X'
+          rm -rf ~/Library/Developer/Xcode/DerivedData/*
+          sudo pkill -f testmanagerd || true && sleep 3 && xcodebuild test -scheme mlx-swift-Package -destination 'platform=macOS'
 
       - name: Upload test results
         if: always()
