--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -50,7 +50,7 @@ jobs:
           sudo pkill -f testmanagerd || true && sleep 3 && xcodebuild test -scheme mlx-swift-Package -destination 'platform=macOS'
 
       - name: Upload test results
-        if: always()
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
