--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,7 +47,7 @@ jobs:
           xcrun --show-sdk-build-version
           swift --version
           rm -rf ~/Library/Developer/Xcode/DerivedData/*
-          launchctl start com.apple.testmanagerd
+          launchctl list
           xcodebuild test -scheme mlx-swift-Package -destination 'platform=macOS'
 
       - name: Upload test results
