--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,8 +47,8 @@ jobs:
           xcrun --show-sdk-build-version
           swift --version
           rm -rf ~/Library/Developer/Xcode/DerivedData/*
-          launchctl list
-          xcodebuild test -scheme mlx-swift-Package -destination 'platform=macOS'
+          xcodebuild -scheme mlx-swift-Package -destination 'platform=macOS'
+          xcrun xctest ~/Library/Developer/Xcode/DerivedData/mlx-swift-*/Build/Products/Debug/CmlxTests.xctest
 
       - name: Upload test results
         if: failure()
