--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,15 +35,17 @@ jobs:
             sed -E 's/.*"([^"]+)".*/\1/')
           echo "swift-format $LATEST_TAG"
           git clone --branch $LATEST_TAG --depth 1 https://github.com/swiftlang/swift-format.git
-          echo "SWIFT_FORMAT_VERSION=$LATEST_TAG" >> $GITHUB_ENV
+          echo "SWIFT_FORMAT_VERSION=$LATEST_TAG" >> $GITHUB_OUTPUT
 
       - name: Cache swift-format build
         uses: actions/cache@v4
+        id: cache-swift-format
         with:
           path: /tmp/swift-format/.build
-          key: ${{ runner.os }}-swift-format-build-${{ env.SWIFT_FORMAT_VERSION }}
+          key: ${{ runner.os }}-swift-format-build-${{ needs.lint.outputs.SWIFT_FORMAT_VERSION }}
 
       - name: Build swift-format
+        if: steps.cache-swift-format.outputs.cache-hit != 'true'
         shell: sh
         run: |
           cd /tmp/swift-format
