--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -158,7 +158,7 @@ jobs:
     needs: lint
     runs-on: 'gpu-t4-4-core'
     env:
-      # Note 12/17/2025: the CI machine does not meet CUDA 13's driver requirement.
+      # Note 12/18/2025: the CI machine does not meet CUDA 13's driver requirement.
       # Compatibility matrix:
       # https://docs.nvidia.com/deeplearning/cudnn/backend/latest/reference/support-matrix.html
       TOOLKIT_VERSION: "cuda-12.9"
@@ -171,6 +171,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
+    - name: Linux CUDA Setup
+      run: |
+        bash .github/scripts/setup-linux-cuda.sh
+
     - name: Linux CUDA CMake Swift Build - No Release
       run: |
-        bash .github/scripts/setup+build-linux-cuda-cmake.sh
+        bash .github/scripts/build-linux-cuda-cmake.sh
