update for iOS build

--- a/xcode/xcconfig/project.xcconfig
+++ b/xcode/xcconfig/project.xcconfig
@@ -58,3 +58,11 @@ SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone
 VERSIONING_SYSTEM = apple-generic
 VERSION_INFO_PREFIX = 
 
+IPHONEOS_DEPLOYMENT_TARGET = 17.6;
+MACOSX_DEPLOYMENT_TARGET = 14.6;
+SUPPORTED_PLATFORMS = "appletvos iphoneos macosx xros";
+SUPPORTS_MACCATALYST = NO;
+TARGETED_DEVICE_FAMILY = "1,2,3,7";
+TVOS_DEPLOYMENT_TARGET = 17.6;
+XROS_DEPLOYMENT_TARGET = 1.3;
+
