--- a/xcode/xcconfig/common.xcconfig
+++ b/xcode/xcconfig/common.xcconfig
@@ -1,11 +1,19 @@
-#include "common.xcconfig"
+IPHONEOS_DEPLOYMENT_TARGET = 17.0
+MACOSX_DEPLOYMENT_TARGET = 14.0
+SUPPORTED_PLATFORMS = appletvos iphoneos macosx xros
+SUPPORTS_MACCATALYST = YES
+TARGETED_DEVICE_FAMILY = 1,2,3,6,7
+TVOS_DEPLOYMENT_TARGET = 17.0
+XROS_DEPLOYMENT_TARGET = 1.3
+
+
 
 ALLOW_TARGET_PLATFORM_SPECIALIZATION = YES
 ALWAYS_SEARCH_USER_PATHS = NO
 ASSETCATALOG_COMPILER_GENERATE_SWIFT_ASSET_SYMBOL_EXTENSIONS = YES
 CLANG_ANALYZER_NONNULL = YES
 CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION = YES_AGGRESSIVE
-CLANG_CXX_LANGUAGE_STANDARD = gnu++20
+CLANG_CXX_LANGUAGE_STANDARD = gnu++17
 CLANG_ENABLE_MODULES = YES
 CLANG_ENABLE_OBJC_ARC = YES
 CLANG_ENABLE_OBJC_WEAK = YES
@@ -44,7 +52,7 @@ ENABLE_NS_ASSERTIONS[config=Release] = NO
 ENABLE_STRICT_OBJC_MSGSEND = YES
 ENABLE_TESTABILITY[config=Debug] = YES
 ENABLE_USER_SCRIPT_SANDBOXING = YES
-GCC_C_LANGUAGE_STANDARD = gnu17
+GCC_C_LANGUAGE_STANDARD = c17
 GCC_DYNAMIC_NO_PIC[config=Debug] = NO
 GCC_NO_COMMON_BLOCKS = YES
 GCC_OPTIMIZATION_LEVEL[config=Debug] = 0
@@ -79,7 +87,4 @@ SWIFT_INSTALL_OBJC_HEADER = NO
 SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone
 SWIFT_VERSION = 5.0
 VERSIONING_SYSTEM = apple-generic
-VERSION_INFO_PREFIX =
-
-
-PRODUCT_BUNDLE_IDENTIFIER = com.apple.mlx.MLX
+VERSION_INFO_PREFIX = 
