--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         shell: bash
         run: xcodebuild -showComponent MetalToolchain
 
-      - name: Setup cmake
+      - name: Setup gh
         shell: sh
         run: |
           brew install gh
