add gh for the release build (#356)
* add gh for the release build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,11 @@ jobs:
         shell: bash
         run: xcodebuild -showComponent MetalToolchain
 
+      - name: Setup gh
+        shell: sh
+        run: |
+          brew install gh
+
       - name: Build XCFrameworks
         shell: bash
         env:
