--- a/.github/workflows/release-cuda-artifactbundle.yml
+++ b/.github/workflows/release-cuda-artifactbundle.yml
@@ -22,9 +22,9 @@ jobs:
       matrix:
         include:
           - arch: x86_64
-            runner: ubuntu-24.04-2xlarge
+            runner: ubuntu-24.04
           - arch: aarch64
-            runner: ubuntu-24.04-arm-2xlarge
+            runner: ubuntu-24.04-arm
     runs-on: ${{ matrix.runner }}
     env:
       TOOLKIT_VERSION: "cuda-12.9"
